# rusty-notes

./: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  Readme.md  makefile
migrations/: V1__create_notes_table.sql  V2__insert_default_notes.sql
src/: main.rs
