[package]
name = "notes_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
actix-service = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
chrono = { version = "0.4", features = ["serde"] }
refinery = { version = "0.8.0", features = ["tokio-postgres"] }
futures = "0.3"

env_logger = "0.9"